--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/TeXiS/TeXiS_pream.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/TeXiS/TeXiS_pream.tex
@@ -227,7 +227,7 @@ showstringspaces=false            %
   \newcommand{\acl}[1]{#1}
   \newcommand{\acf}[1]{#1}
 \else
-  \usepackage{glosstex}
+  %\usepackage{glosstex}
 \fi
 
 % shortvrb supuestamente define algunas macros cómodas como carácteres
