Se inicia capitulo de aplicacion movil

--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/02Capitulo1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/02Capitulo1.tex
@@ -15,7 +15,7 @@
 \def\bluecolor{\color{myblue}}
 \def\purplecolor{\color{mypurple}}
 
-\chapter{Diseño y desarrollo del lado del servidor}
+\chapter{Diseño y desarrollo del servidor}
 
 \begin{resumen}
 En este capítulo se describen todos los aspectos relacionados al diseño y desarrollo tanto de la base de datos como del Web Service, junto a los distintos modelados y diagramas. Se presentará la arquitectura escogida de resolución.
