--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
@@ -75,3 +75,24 @@
 	note = {Accedido: 10/02/2019}
 }
 
+@misc{manifest,
+	title = {Archivo Android Manifest},
+	author = {Academia Android},
+	howpublished = {\url{https://academiaandroid.com/archivo-android-manifest/}},
+	note = {Accedido: 13/02/2019}
+}
+
+@misc{componentesAndroid,
+	title = {Aspectos fundamentales de la aplicaci{\'o}n},
+	author = {Academia Android},
+	howpublished = {\url{https://developer.android.com/guide/components/fundamentals/}},
+	note = {Accedido: 13/02/2019}
+}
+
+@misc{estructuraAndroid,
+	title = {Estructura de un proyecto Android},
+	author = {S. Oliver},
+	howpublished = {\url{http://www.sgoliver.net/blog/estructura-de-un-proyecto-android-android-studio/}},
+	note = {Accedido: 13/02/2019}
+}
+
